--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NHS Attendance | High Performance Sync</title>
+    <title>NHS Attendance | Auto-Sync Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         body { font-family: -apple-system, sans-serif; background: #0f172a; color: white; margin: 0; display: flex; height: 100vh; overflow: hidden; }
@@ -12,7 +12,7 @@
         .editable-box { width: 100%; background: rgba(255, 255, 255, 0.03); border: 3px dashed #38bdf8; border-radius: 20px; padding: 25px; font-size: 3em; color: white; text-align: center; outline: none; }
         .box { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 0 80px rgba(56, 189, 248, 0.5); min-width: 480px; min-height: 480px; display: flex; align-items: center; justify-content: center; }
         #timer { font-size: 90px; color: #38bdf8; font-weight: 900; margin-bottom: 15px; }
-        #sync-status { position: absolute; top: 15px; right: 20px; font-size: 0.9em; color: #facc15; background: rgba(250, 204, 21, 0.1); padding: 5px 15px; border-radius: 20px; }
+        #sync-status { position: absolute; top: 15px; right: 20px; font-size: 0.9em; color: #facc15; background: rgba(250, 204, 21, 0.1); padding: 5px 15px; border-radius: 20px; z-index: 100; }
     </style>
 </head>
 <body>
@@ -25,46 +25,70 @@
         <h1>NHS ATTENDANCE</h1>
         <div id="timer"><span id="count">5</span>s</div>
         <div class="box"><div id="qrcode"></div></div>
+        <p>Refreshes every 5s | Auto-Sync Active</p>
     </div>
 
     <script>
-        const 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbyq3BhG420ZH2HSVjMNu_02CcvF7EQC-BWdKdhhb4hLe4DehVTLkAdMUYm7N3FoW7-ViQ/exec";
-        let 𝐭₀ = -7000; 
-        let 𝐬𝐲𝐧𝐜𝐞𝐝 = false;
+        const 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbz7Q0bU3JR3Gk1iUlpexdpnIFspSOd1Lm-kPMZjEugr1a8vc9t2rPxW-QZgFPVj2bLZtQ/exec";
+        
+        // 1. GLOBAL VARIABLES
+        window.𝐭₀ = -7000; 
+        window.𝐬𝐲𝐧𝐜𝐞𝐝 = false;
 
-        // CRITICAL: Global callback for JSONP bypass
+        // 2. THE CALLBACK (Must be defined before the sync script is added)
         window.handleSyncResponse = function(𝐝𝐚𝐭𝐚) {
-            𝐭₀ = (𝐝𝐚𝐭𝐚.𝐭𝐢𝐦𝐞 - Date.now()) - 7000;
+            window.𝐭₀ = (𝐝𝐚𝐭𝐚.𝐭𝐢𝐦𝐞 - Date.now()) - 7000;
             const 𝐬 = document.getElementById('sync-status');
-            𝐬.innerText = "✓ Server Synced (" + Math.round(𝐭₀) + "ms)";
-            𝐬.style.color = "#10b981";
-            𝐬.style.background = "rgba(16, 185, 129, 0.1)";
-            𝐬𝐲𝐧𝐜𝐞𝐝 = true;
+            if(𝐬) {
+                𝐬.innerText = "✓ Server Synced (" + Math.round(window.𝐭₀) + "ms)";
+                𝐬.style.color = "#10b981";
+                𝐬.style.background = "rgba(16, 185, 129, 0.1)";
+            }
+            window.𝐬𝐲𝐧𝐜𝐞𝐝 = true;
             updateQR();
         };
-
-        function syncTime() {
-            const 𝐬𝐜 = document.createElement('script');
-            𝐬𝐜.src = 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?action=sync&callback=handleSyncResponse&ts=" + Date.now();
-            document.body.appendChild(𝐬𝐜);
-        }
 
         function updateQR() {
             const 𝐪 = document.getElementById("qrcode");
             if (!𝐪) return;
             𝐪.innerHTML = "";
-            const 𝐤 = Math.floor((Date.now() + 𝐭₀) / 5000); 
-            new QRCode(𝐪, { text: 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?key=" + 𝐤, width: 480, height: 480 });
+            const 𝐤 = Math.floor((Date.now() + window.𝐭₀) / 5000); 
+            new QRCode(𝐪, { 
+                text: 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?key=" + 𝐤, 
+                width: 480, 
+                height: 480,
+                correctLevel : QRCode.CorrectLevel.M 
+            });
         }
 
+        function startSync() {
+            const 𝐬𝐜 = document.createElement('script');
+            𝐬𝐜.src = 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?action=sync&callback=handleSyncResponse&ts=" + Date.now();
+            document.body.appendChild(𝐬𝐜);
+            
+            // Fail-safe: If it hasn't synced in 3 seconds, show the QR anyway
+            setTimeout(() => {
+                if (!window.𝐬𝐲𝐧𝐜𝐞𝐝) {
+                    console.log("Sync timed out, using local time lead.");
+                    document.getElementById('sync-status').innerText = "⚠ Using Local Time Offset";
+                    updateQR();
+                }
+            }, 3000);
+        }
+
+        // Timer Loop
         setInterval(() => {
             const 𝐧 = document.getElementById('count');
             let 𝐯 = parseInt(𝐧.innerText) - 1;
-            if (𝐯 <= 0) { updateQR(); 𝐯 = 5; }
+            if (𝐯 <= 0) { 
+                updateQR(); 
+                𝐯 = 5; 
+            }
             𝐧.innerText = 𝐯;
         }, 1000);
 
-        syncTime();
+        // Run immediately
+        startSync();
     </script>
 </body>
 </html>
