--- a/index.html
+++ b/index.html
@@ -4,51 +4,52 @@
     <title>NHS Attendance | Master Sync</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #0f172a; color: white; margin: 0; display: flex; height: 100vh; overflow: hidden; }
+        body { font-family: -apple-system, sans-serif; background: #0f172a; color: white; margin: 0; display: flex; height: 100vh; overflow: hidden; }
         .admin-panel { flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; border-right: 2px solid rgba(56, 189, 248, 0.2); padding: 40px; background: rgba(15, 23, 42, 0.8); }
         .qr-panel { flex: 1.2; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
-        .input-group { width: 100%; max-width: 450px; margin-bottom: 40px; position: relative; }
+        .input-group { width: 100%; max-width: 450px; margin-bottom: 40px; }
         label { display: block; color: #38bdf8; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; margin-bottom: 15px; font-size: 0.9em; }
-        .editable-box { width: 100%; background: rgba(255, 255, 255, 0.03); border: 3px dashed #38bdf8; border-radius: 20px; padding: 25px; font-size: 3.5em; color: white; text-align: center; outline: none; transition: all 0.3s ease; box-sizing: border-box; }
+        .editable-box { width: 100%; background: rgba(255, 255, 255, 0.03); border: 3px dashed #38bdf8; border-radius: 20px; padding: 25px; font-size: 3.5em; color: white; text-align: center; outline: none; }
         .box { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 0 80px rgba(56, 189, 248, 0.5); min-width: 480px; min-height: 480px; display: flex; align-items: center; justify-content: center; margin: 20px 0; }
-        #timer { font-size: 110px; color: #38bdf8; font-weight: 900; margin-bottom: 10px; text-shadow: 0 0 20px rgba(56, 189, 248, 0.4); }
-        #sync-status { position: absolute; top: 15px; right: 20px; font-size: 0.85em; color: #facc15; background: rgba(250, 204, 21, 0.1); padding: 6px 16px; border-radius: 30px; border: 1px solid rgba(250, 204, 21, 0.2); transition: all 0.5s ease; }
+        #timer { font-size: 110px; color: #38bdf8; font-weight: 900; margin-bottom: 10px; }
+        #sync-status { position: absolute; top: 15px; right: 20px; font-size: 0.85em; color: #facc15; background: rgba(250, 204, 21, 0.1); padding: 6px 16px; border-radius: 30px; border: 1px solid rgba(250, 204, 21, 0.2); }
     </style>
 </head>
 <body>
-    <div id="sync-status">⚡ CALIBRATING CLOCKS...</div>
+    <div id="sync-status">⚡ CALIBRATING...</div>
     <div class="admin-panel">
-        <div class="input-group">
-            <label>Meeting Date</label>
-            <input type="text" class="editable-box" id="displayDate" value="02/11/2026" maxlength="10">
-        </div>
-        <div class="input-group">
-            <label>Form Password</label>
-            <input type="text" class="editable-box" id="displayPass" value="Service">
-        </div>
+        <div class="input-group"><label>Meeting Date</label><input type="text" class="editable-box" id="displayDate" value="02/11/2026"></div>
+        <div class="input-group"><label>Form Password</label><input type="text" class="editable-box" id="displayPass" value="Service"></div>
     </div>
     <div class="qr-panel">
         <h1>NHS ATTENDANCE</h1>
         <div id="timer"><span id="count">5</span>s</div>
         <div class="box"><div id="qrcode"></div></div>
-        <p>SECURE ROTATION ACTIVE</p>
     </div>
 
     <script>
-        // UPDATED WITH YOUR NEW SCRIPT URL
         const 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbz7PI80uideNStN6Jdj9avwzqSwZF8m8dGpWI8SRrhzUGG4F0sJUn_tsvk7fIJonhbL0Q/exec";
-        
         window.𝐝𝐫𝐢𝐟𝐭 = 0; 
 
-        window.handleSyncResponse = function(𝐝𝐚𝐭𝐚) {
-            window.𝐝𝐫𝐢𝐟𝐭 = 𝐝𝐚𝐭𝐚.𝐭𝐢𝐦𝐞 - Date.now();
-            const 𝐬 = document.getElementById('sync-status');
-            𝐬.innerText = "✓ CLOCK SYNCED TO GOOGLE";
-            𝐬.style.color = "#10b981";
-            𝐬.style.background = "rgba(16, 185, 129, 0.1)";
-            𝐬.style.borderColor = "rgba(16, 185, 129, 0.3)";
+        // Simplified Sync logic for Enterprise Accounts
+        async function syncClocks() {
+            try {
+                const 𝐬𝐭𝐚𝐫𝐭 = Date.now();
+                const 𝐫𝐞𝐬 = await fetch(𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?action=sync");
+                const 𝐝 = await 𝐫𝐞𝐬.json();
+                // Adjust for network latency
+                const 𝐥𝐚𝐭𝐞𝐧𝐜𝐲 = (Date.now() - 𝐬𝐭𝐚𝐫𝐭) / 2;
+                window.𝐝𝐫𝐢𝐟𝐭 = (𝐝.𝐭𝐢𝐦𝐞 + 𝐥𝐚𝐭𝐞𝐧𝐜𝐲) - Date.now();
+                
+                const 𝐬 = document.getElementById('sync-status');
+                𝐬.innerText = "✓ SYNCED";
+                𝐬.style.color = "#10b981";
+                𝐬.style.background = "rgba(16, 185, 129, 0.1)";
+            } catch (𝐞) {
+                console.log("Sync failed, using local time.");
+            }
             updateQR();
-        };
+        }
 
         function updateQR() {
             const 𝐪𝐜 = document.getElementById("qrcode");
@@ -64,13 +65,8 @@
             𝐧.innerText = 𝐯;
         }, 1000);
 
-        // Fail-safe init
-        updateQR();
-
-        // Trigger Sync
-        const 𝐬𝐜 = document.createElement('script');
-        𝐬𝐜.src = 𝐁𝐀𝐒𝐄_𝐔𝐑𝐋 + "?action=sync&callback=handleSyncResponse&ts=" + Date.now();
-        document.body.appendChild(𝐬𝐜);
+        // Initial launch
+        syncClocks();
     </script>
 </body>
 </html>
