--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             border-radius: 28px; 
             box-shadow: 0 0 80px rgba(56, 189, 248, 0.15); 
             margin: 30px 0;
-            transition: transform 0.3s ease;
         }
 
         #timer { 
@@ -133,8 +132,8 @@
     </div>
 
     <script>
-        // Updated to your newest deployment
-        const BASE_URL = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbyXqtcNIZErd5sL5kegueOM1WpzqCa2oOa2kJDP_DobkM8yCWcl9NI-TZbHlq4qzbuapA/exec";
+        // Updated to your newest deployment URL
+        const BASE_URL = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbz6rQDNUwGtUnPZqg20f-8SZi12JLvVZBmpzFzlgTj5bKQH18ADFsvigjfD_hr-eRI6zw/exec";
         
         let drift = 0; 
 
