--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div style="color:var(--text-dim); font-size: 0.8rem; letter-spacing: 1px;">ID-ENTRY MODE (1HR HARDWARE LOCK)</div>
     </div>
     <script>
-        const BASE_URL = "https://script.google.com/a/macros/houstonchristian.org/s/AKfycbxZ--yOrqaUoRlHkhS_mw9wLh6QBfEvaw5uu82yj8OFs_Lve6e4ZM8G6-kJcwrYtc3k9A/exec";
+        const BASE_URL = "https://script.google.com/macros/s/AKfycby-lY1owIcetFV2HKgLQGEiqLXzpNnlU-7--1bjSDXTqgGrnYRQLP6l4-Wdk0FtnEUO/exec";
         let drift = 0; 
         async function syncServer() {
             try {
