--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <div class="qr-container">
             <div id="qrcode"></div>
         </div>
-        <div class="footer-note">ID-ENTRY MODE (1HR HARDWARE LOCK)</div>
+        <div class="footer-note">SESSION-SPECIFIC LOCKOUT ACTIVE</div>
     </div>
 
     <script>
         // Updated to your newest deployment URL
-        const BASE_URL = "https://script.google.com/macros/s/AKfycbzsWcfTz_GxTd0hsQUztO_M2TS2r8RgIQvVCHhq0qzqt-osC59biw6_pis4HdzrbMSP/exec";
+        const BASE_URL = "https://script.google.com/macros/s/AKfycbwLaosooPl6VffvqNQk5nUwSMPUuH55zNB8aoKOHI1WX7jzjp2pkcx-g_KKkGCNfzAj/exec";
         
         let drift = 0; 
 
