--- a/index.html
+++ b/index.html
@@ -5,55 +5,21 @@
     <title>NHS | Attendance Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
-        :root {
-            --bg: #0b0f1a;
-            --card: #1e293b;
-            --accent: #38bdf8;
-            --text-main: #f8fafc;
-            --text-dim: #94a3b8;
-        }
-
-        body { 
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; 
-            background: var(--bg); color: var(--text-main); margin: 0; 
-            display: flex; height: 100vh; overflow: hidden; 
-        }
-
-        .admin-panel { 
-            flex: 1; display: flex; flex-direction: column; justify-content: center; 
-            align-items: center; background: #0f172a; padding: 60px;
-            border-right: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
-        .qr-panel { 
-            flex: 1.5; display: flex; flex-direction: column; justify-content: center; 
-            align-items: center; text-align: center; 
-            background: radial-gradient(circle at center, #1e293b 0%, #0b0f1a 100%); 
-        }
-
+        :root { --bg: #0b0f1a; --card: #1e293b; --accent: #38bdf8; --text-main: #f8fafc; --text-dim: #94a3b8; }
+        body { font-family: -apple-system, sans-serif; background: var(--bg); color: var(--text-main); margin: 0; display: flex; height: 100vh; overflow: hidden; }
+        .admin-panel { flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; background: #0f172a; padding: 60px; border-right: 1px solid rgba(255, 255, 255, 0.05); }
+        .qr-panel { flex: 1.5; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: radial-gradient(circle at center, #1e293b 0%, #0b0f1a 100%); }
         .input-group { width: 100%; max-width: 380px; margin-bottom: 40px; }
         label { display: block; color: var(--accent); font-weight: 700; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px; font-size: 0.75rem; }
-
-        .editable-box { 
-            width: 100%; background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(56, 189, 248, 0.2); 
-            border-radius: 16px; padding: 20px; font-size: 2.5rem; color: white; text-align: center; outline: none; font-weight: 300;
-        }
-
+        .editable-box { width: 100%; background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(56, 189, 248, 0.2); border-radius: 16px; padding: 20px; font-size: 2.5rem; color: white; text-align: center; outline: none; font-weight: 300; }
         .qr-container { background: white; padding: 30px; border-radius: 28px; box-shadow: 0 0 80px rgba(56, 189, 248, 0.15); margin: 30px 0; }
-        #timer { font-size: 100px; color: var(--accent); font-weight: 200; margin-bottom: -10px; font-variant-numeric: tabular-nums; }
-
-        #sync-status { 
-            position: absolute; top: 30px; right: 30px; font-size: 0.7rem; font-weight: 700;
-            color: #10b981; background: rgba(16, 185, 129, 0.1); padding: 10px 20px; border-radius: 40px; border: 1px solid rgba(16, 185, 129, 0.2); 
-        }
-
+        #timer { font-size: 100px; color: var(--accent); font-weight: 200; margin-bottom: -10px; }
+        #sync-status { position: absolute; top: 30px; right: 30px; font-size: 0.7rem; font-weight: 700; color: #10b981; background: rgba(16, 185, 129, 0.1); padding: 10px 20px; border-radius: 40px; border: 1px solid rgba(16, 185, 129, 0.2); }
         h1 { font-weight: 800; letter-spacing: 4px; font-size: 1.2rem; color: var(--text-dim); }
-        .footer-note { margin-top: 20px; color: var(--text-dim); font-size: 0.8rem; letter-spacing: 1px; }
     </style>
 </head>
 <body>
     <div id="sync-status">● SYSTEM LIVE</div>
-
     <div class="admin-panel">
         <div class="input-group">
             <label>Session Date</label>
@@ -64,21 +30,15 @@
             <input type="text" class="editable-box" id="displayPass" value="Service">
         </div>
     </div>
-
     <div class="qr-panel">
         <h1>NHS CHECK-IN</h1>
-        <div id="timer">16s</div>
-        <div class="qr-container">
-            <div id="qrcode"></div>
-        </div>
-        <div class="footer-note">BUFFERED QR SECURITY ACTIVE</div>
+        <div id="timer">6s</div>
+        <div class="qr-container"><div id="qrcode"></div></div>
+        <div class="footer-note" style="color:var(--text-dim)">DYNAMIC SYNC ACTIVE</div>
     </div>
-
     <script>
         const BASE_URL = "https://script.google.com/macros/s/AKfycbzX1ChSao1J-yuCOUefiKTZzEfY2mO4qv-AyBm3pFe0hbXCcO8cVAFiiFHypGmqVfeJwg/exec";
-        
         let drift = 0; 
-
         async function syncServer() {
             try {
                 const start = Date.now();
@@ -86,36 +46,22 @@
                 const data = await res.json();
                 drift = (data.serverTime + ((Date.now() - start) / 2)) - Date.now();
                 document.getElementById('sync-status').innerText = "● SYSTEM SYNCED";
-            } catch (e) { 
-                document.getElementById('sync-status').innerText = "● SYNC FAILED"; 
-            }
+            } catch (e) { document.getElementById('sync-status').innerText = "● SYNC FAILED"; }
             genQR();
         }
-
         function genQR() {
             const container = document.getElementById("qrcode");
             container.innerHTML = "";
             const now = Date.now() + drift;
-            // Key changes every 5 seconds
-            const key = Math.floor(now / 5000); 
-            new QRCode(container, { 
-                text: `${BASE_URL}?key=${key}`, 
-                width: 400, height: 400,
-                correctLevel : QRCode.CorrectLevel.M 
-            });
+            const key = Math.floor(now / 6000); 
+            new QRCode(container, { text: `${BASE_URL}?key=${key}`, width: 400, height: 400 });
         }
-
-        // Updated timer to 16 seconds to give students more time per QR code
-        let timeLeft = 16;
+        let timeLeft = 6;
         setInterval(() => {
             timeLeft--;
-            if (timeLeft <= 0) { 
-                genQR(); 
-                timeLeft = 16; 
-            }
+            if (timeLeft <= 0) { genQR(); timeLeft = 6; }
             document.getElementById('timer').innerText = timeLeft + "s";
         }, 1000);
-
         syncServer();
         setInterval(syncServer, 120000);
     </script>
